[gd_scene load_steps=5 format=3 uid="uid://b8dflih38kycx"]

[ext_resource type="Texture2D" uid="uid://daf46t4wev8n2" path="res://assets/ui_player.png" id="1_sa0se"]
[ext_resource type="Script" path="res://player_ui.gd" id="1_st4k5"]
[ext_resource type="PackedScene" uid="uid://drq2axx5gef0v" path="res://counter.tscn" id="2_wjh3j"]
[ext_resource type="Texture2D" uid="uid://cy7ghyoj3r52v" path="res://assets/drachma_symbol.png" id="3_f01ji"]

[node name="PlayerUI" type="Node2D"]
script = ExtResource("1_st4k5")

[node name="UiPlayerSprite2D" type="Sprite2D" parent="."]
position = Vector2(12, 54)
texture = ExtResource("1_sa0se")
hframes = 5
frame = 4

[node name="CoinCounter" parent="." instance=ExtResource("2_wjh3j")]
position = Vector2(4, 85)

[node name="Sprite2D" type="Sprite2D" parent="CoinCounter"]
position = Vector2(-3, -2)
texture = ExtResource("3_f01ji")
centered = false
